--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server --watch -p 9999 db.json"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
-    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
